added comments for linearly separable data in classification

--- a/Regression/Regression_real_data.ipynb
+++ b/Regression/Regression_real_data.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "running-format",
    "metadata": {},
    "outputs": [],
    "source": [
     "# header files\n",
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import math\n",
     "\n",
-    "# Reading the synthetic data into pandas dataframe\n",
+    "# Reading the real data into numpy dataframe\n",
     "dataset = np.genfromtxt(r\"datasets\\2_music.txt\",delimiter=',')\n",
     "X_dataset = dataset[:,0:68] \n",
     "Y_dataset = dataset[:,68:70]\n",
