adding comments for non linearly separable data in classification

--- a/Regression/Regression_real_data.ipynb
+++ b/Regression/Regression_real_data.ipynb
@@ -222,11 +222,22 @@
     }
    ],
    "source": [
+    "# variance in the features \n",
     "sigma_square = 100\n",
+    "\n",
+    "# number of clusters\n",
     "k = 25\n",
+    "\n",
+    "# maximum number of iterations while finding K means clusters\n",
     "iteration = 100\n",
+    "\n",
+    "# means obtained using K means clustering algorithm\n",
     "mean = KmeansClustering(k,x_train,iteration)\n",
+    "\n",
+    "# regularisation coefficient\n",
     "lamda = 0\n",
+    "\n",
+    "# error between predicted and actual values of the target feature\n",
     "error = erms_error_gaussian(x_train,y_train,lamda,mean,sigma_square,k)\n",
     "print(error)"
    ]
