adding comments for classification models

--- a/Regression/Regression_real_data.ipynb
+++ b/Regression/Regression_real_data.ipynb
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "# K means clustering to find k clusters\n",
-    "# inputs : no. of clusters, train data, max no, of iterations\n",
+    "# inputs : no. of clusters, train data, max no. of iterations\n",
     "def KmeansClustering(k,data,iteration):\n",
     "    mean = np.zeros((k,degree))\n",
     "\n",
