made plot related changes

--- a/Classification/real data varying length features.ipynb
+++ b/Classification/real data varying length features.ipynb
@@ -498,20 +498,24 @@
     "accuracy_test = np.zeros(2)\n",
     "\n",
     "for i in range(2):\n",
+    "    if(i==0):\n",
+    "        covariance = \"full\"\n",
+    "    else:\n",
+    "        covariance = \"diagonalised\"\n",
     "    confusion_matrix = BayesClassifier(feature_train,class_train,Q,w,mean,cov,p_class,i)\n",
-    "    print(\"\\nConfusion matrix for training data, when covariance matrix is \"+str(i)+\":\")\n",
+    "    print(\"\\nConfusion matrix for training data, when covariance matrix is \"+covariance+\":\")\n",
     "    printheatmap(confusion_matrix)\n",
     "    accuracy_train[i] = np.trace(confusion_matrix)/len(feature_train)*100\n",
     "    confusion_matrix = BayesClassifier(feature_dev,class_dev,Q,w,mean,cov,p_class,i)\n",
     "    accuracy_dev[i] = np.trace(confusion_matrix)/len(feature_dev)*100\n",
     "    confusion_matrix = BayesClassifier(feature_test,class_test,Q,w,mean,cov,p_class,i)\n",
     "    accuracy_test[i] = np.trace(confusion_matrix)/len(feature_test)*100\n",
-    "    print(\"\\nConfusion matrix for test data, when covariance matrix is \"+str(i)+\":\")\n",
+    "    print(\"\\nConfusion matrix for test data, when covariance matrix is \"+covariance+\":\")\n",
     "    printheatmap(confusion_matrix)\n",
     "\n",
-    "    print(\"Accuracy on training data, when covariance matrix is \"+str(i)+\" : \"+str(accuracy_train[i])+\"%\\n\")\n",
-    "    print(\"Accuracy on validation data, when covariance matrix is \"+str(i)+\" : \"+str(accuracy_dev[i])+\"%\\n\")\n",
-    "    print(\"Accuracy on test data, when covariance matrix is \"+str(i)+\" : \"+str(accuracy_test[i])+\"%\\n\\n\")"
+    "    print(\"Accuracy on training data, when covariance matrix is \"+covariance+\" : \"+str(accuracy_train[i])+\"%\\n\")\n",
+    "    print(\"Accuracy on validation data, when covariance matrix is \"+covariance+\" : \"+str(accuracy_dev[i])+\"%\\n\")\n",
+    "    print(\"Accuracy on test data, when covariance matrix is \"+covariance+\" : \"+str(accuracy_test[i])+\"%\\n\\n\")"
    ]
   },
   {
