--- a/Discriminative models/real data image classification.ipynb
+++ b/Discriminative models/real data image classification.ipynb
@@ -367,6 +367,7 @@
     }
    ],
    "source": [
+    "# this can be used to find the ideal parameters for the sklearn model\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "param_grid = {'C' : [0.1, 1], 'gamma': [1,10,15,20]}\n",
     "\n",
