updated info in regression report

--- a/Regression/Report/main.tex
+++ b/Regression/Report/main.tex
@@ -21,8 +21,7 @@
 \newcommand{\zon}{$\{0,1\}^n$}
 \newcommand{\zo}{$\{0,1\}$}
 
-\title{Regression Task\\
-Report}
+\title{Function approximation or Regression}
 \author{Reetwik Das}
 
 \begin{document}
@@ -35,6 +34,9 @@ Report}
 \newpage 
 
 \section{Polynomial curve fitting for dataset}
+This is majorly used for funstion approximation or regression. We have an independent variable, say $x$ and a target variable or dependent variable, say $y$ and we need to approximate the underlying function $ y = f(x)$.\\
+We approximate the function $f(x) = w_{0}+w_{1}x_1 + w_2x_{2} ..... w_Mx_M$, here $M$ is the degree and ususally a higher $M$ would help us getting a better approximation of the function.\\
+
 Dataset1 : function2.csv is the dataset used in this section for all the experiments.
 
 \subsection{Without Regularization}
